2008-03-13  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-region-for-defun-function): Deleted.
	(slime-region-for-defun-at-point): Use beginning-of-defun
	and not beginning-of-sexp.
	(slime-flash-region): New function.
	(slime-compile-region): Use it.

2008-03-13  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-xref-group): Renamed from slime-location-to-string.
	Handle source-form locations.

2008-03-12  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-find-definitions-function): Renamed from
	slime-edit-definition-fallback-function.
	(slime-find-definitions): Use it.
	(slime-find-tag-if-tags-table-visited): Deleted.

2008-03-12  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-inspector-operate-on-point): Signal an error if
	there is no object to operate on.

2008-03-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el (sldb-toggle-details): Inhibit point-motion-hooks.
	This is a workaround for problems with the --more-- field.

2008-03-07  Helmut Eller  <heller@common-lisp.net>

	Be GC friendlier when parsing net packets.

	* slime.el (slime-net-read): Instead of consing a fresh string,
	use narrow-to-region and read the packet out of the buffer.

2008-03-04  Helmut Eller  <heller@common-lisp.net>

	* test.sh: Updated for Emacs 23.

2008-03-04  Andreas Fuchs <asf@boinkor.net>

	* swank.asd (asdf:output-files, asdf:perform): Make compile-op on
	swank-loader-file a noop.

2008-03-02  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-edit-definition-hooks): This variable can be
	used to hook into the M-. machinery.
	(slime-edit-definition): Run above hooks until one succeeds. By
	default, try to find a definition for the symbol at point.

2008-02-28  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (find-definition-for-thing): New DEFSLIMEFUN.

	* swank-backend (find-source-location): New DEFINTERFACE.

	* swank-sbcl (find-source-location): Implement it.
