@@ -1,3 +1,9 @@
+2008-03-13  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* slime.el (slime-edit-definition-cont): If no definition could
+	be found, print also the package name in the error message where
+	the definition was tried to be found in.
+	
 2008-03-13  Helmut Eller  <heller@common-lisp.net>
 
 	* slime.el (slime-region-for-defun-function): Deleted.
